Todos los puntos del test completos

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 
 	<main>
 		<h1>TEST</h1>
+		<hr>
 
-		<div></div>
+		<div id="displayProducts"></div>
+		<button class="btn"></button>
+		<button class="btn"></button>
+		<button class="btn"></button>
+		<button class="btn"></button>
+		<button class="btn"></button>
 
-		<button></button>
-		<button></button>
-		<button></button>
-		<button></button>
-		<button></button>
+		<div class="modal">
+			<a class="close">cerrar</a>
+			<div class="productDescription"></div>
+		</div>
 	</main>
 
 	<!-- scripts -->
